--- a/SurveyFinalRcode.Rmd
+++ b/SurveyFinalRcode.Rmd
@@ -259,8 +259,8 @@ plot(tab, xlab = "age categories", ylab = "household types", col=c("steelblue1",
 
 # BLUE = couple with children
 # PINK = single parent with children
-# Orange = couple without children 
-# yellow = single without children 
+# ORANGE = couple without children 
+# YELLOW = single without children 
 ```
 ## Question 6
 ```{r}
@@ -303,17 +303,80 @@ mean(society$NR) # compute proportion nonresponders
 summary(society$a_hhresp_dv) 
 # All households at least filled in the grid, so we only look into person (unit) nonresponse.
 
-#### Changes made:
-# - Removed ageest and ageif: Not informative, too many inapplicables
-# - Removed a_marstat > a_mastat_dv contains the same information, but with fewer levels
-# - Removed a_livewith > a_livewith_dv contains the same information, but with unmarried people being 'no' instead of 'inapplicable' > maybe switch?
-# - Removed a_adresp15 and a_adresp17 > these are PNOs and thus useless for prediction
-# - Removed a_ndepchl_dv > Same as a_nchild_dv, but with the Department for Work and Protection's definition of 'dependent'
+# model with all predictors
+fullmodel <- glm(NR ~ 
+                   a_gor_dv + a_urban_dv + a_sex + a_racel_dv + 
+                   a_employ + a_ageest + a_ageif + a_dvage + a_agegr5_dv + a_agegr10_dv + a_agegr13_dv + 
+                   a_marstat + a_livesp +  a_livewith + a_adresp15 + a_adresp17 + a_livesp_dv + a_cohab_dv +
+                   a_single_dv + a_mastat_dv + a_depchl_dv + a_rach16_dv + a_respm16_dv + a_respf16_dv + 
+                   a_nchild_dv + a_ndepchl_dv + 
+                   hh_type + hh_size + n_child # three self-constructed variables of household composition
+                   # don't forget to include self-made variables:
+                   #household_type + household_size + children
+                   , family = binomial, data = society)
+# this returns "glm.fit" fitted probabilities numerically 0 or 1 occurred. 
+
+#### The following variables are excluded  :
+# - ageest, a_dvage and ageif: Not informative, too many inapplicables. a_agegr5_dv, agegr10_dv & agegr13_dv are the remaining age variables in the model. 
+# - a_adresp15 and a_adresp17 > these are PNOs and thus useless for prediction
+# - a_ndepchl_dv > Same as a_nchild_dv, but with the Department for Work and Protection's definition of 'dependent'
+# - a_marstat > a_mastat_dv contains the same information, but with fewer levels
+# -  a_livewith > a_livewith_dv contains the same information, but with unmarried people being 'no' instead of 'inapplicable' > maybe switch?
+# - a_livesp + a_livesp_dv + a_cohab_dv + a_single_dv + a_mastat_dv + a_depchl_dv + a_rach16_dv + a_respm16_dv + a_respf16_dv + a_nchild_dv # why they produce errors?
+
+halffullmodel <- glm(NR ~ 
+                        a_gor_dv + a_urban_dv + a_sex + a_racel_dv + 
+                        a_employ + a_agegr5_dv + a_agegr10_dv + a_agegr13_dv + 
+                        a_livesp + a_livesp_dv + a_cohab_dv +
+                        a_single_dv + a_mastat_dv + a_depchl_dv + a_rach16_dv + a_respm16_dv + a_respf16_dv + 
+                        a_nchild_dv + 
+                        hh_type + hh_size + n_child # three self-constructed variables of household composition
+                        ,family = binomial, data = society)
+## still produces errors:
+# Hannes model doesn't:
+halffullmodel <- glm(NR ~ 
+  a_gor_dv + a_urban_dv + a_sex + a_racel_dv +
+  a_employ + a_agegr5_dv + a_agegr10_dv + a_agegr13_dv + 
+  hh_size + n_child + hh_type
+  ,family = binomial, data = society)
+
+# model without any predictors
+emptymodel <- nothing <- glm(NR ~ 
+                             1,
+                             family=binomial, data = society )
+summary(emptymodel)
+
+# backwards selection
+backwards <- step(fullmodel)
+halfbackwards <- step(halffullmodel)
+summary(backwards)
+summary(halfbackwards)
+
+# forwards selection to compare backwards model with it. 
+forwards <- step(emptymodel,
+scope=list(lower=formula(emptymodel),upper=formula(fullmodel)), direction="forward")
+
+halfforwards <- step(emptymodel,scope=list(lower=formula(emptymodel),
+  upper=formula(halffullmodel)), direction="forward")
+
+# show different models: 
+formula(fullmodel)
+formula(backwards)
+formula(forwards)
+formula(halfforwards)
+formula(halffullmodel)
+formula(halfbackwards)
 
 
+table(society$NR)
+#table(society$person_response, )
+table(as.matrix(society$NR), as.matrix(society$a_sex), dnn = c("response", "sex"))
+
+
+
+#### SANNES CODE (I LEFT IT IN IF YOU WANT TO COMPARE IT, OTHERWISE IT CAN BE DELETED. X GERBRICH)
 #### Problematic variables:
 # a_racel_dv > maybe fuse different backgrounds?
-
 # a_employ > Only problematic for the two missing cases (remove those?)
 
 # a_dvage > Children under ten are all counted as missing, as they were not interviewed (remove those?)
