--- a/SurveyFinalRcode.Rmd
+++ b/SurveyFinalRcode.Rmd
@@ -251,7 +251,7 @@ Design <- svydesign(ids=~a_hidp, strata=~a_strata, data=society, weights=~a_psne
 ```{r}
 tab <- svytable(~a_agegr5_dv + hh_type, Design) # creates a contingency table of 
 # The Ntotal argument can be either a single number or a data frame whose first column gives the (first-stage) sampling strata and second column the population size in each stratum. In this second case the svytable command performs ???post-stratification???: tabulating and scaling to the population within strata and then adding up the strata.
-
+summary(tab)
 # plot the relationshp between age categories and household types. 
 plot(tab, xlab = "age categories", ylab = "household types", col=c("steelblue1","sienna1","plum2","goldenrod1"))
 
@@ -302,6 +302,8 @@ mean(society$NR) # compute proportion nonresponders
 # Look at levels of household response
 summary(society$a_hhresp_dv) 
 # All households at least filled in the grid, so we only look into person (unit) nonresponse.
+# use design weights, 
+NRdesign <- svydesign(ids=~a_hidp, strata=~a_strata, data=society, weights=~ )
 
 # model with all predictors
 fullmodel <- glm(NR ~ 
